<resources>
    <string name="app_name">فورجوالي</string>
    <string name="action_settings">Settings</string>
    <string name="error_no_connection">لا يوجد اتصال بالانترنت</string>
    <string name="error_site_closed">عفوا الموقع مغلق الان </string>
    <string name="open_drawer">فتح القائمه</string>
    <string name="close_drawer">غلق القائمه</string>
    <string name="main_menu">القائمه الرئيسيه</string>
    <string name="no_connection">ليس هناك اتصال بالانترنت</string>
    <string name="failed_response_format">عذرا ، لم نتمكن من تلقي الاستجابه المطلوبه من الخادم .. نرجو مراسله الدعم </string>
    <string name="send">ارسل</string>
    <string name="settings">الاعدادات</string>
    <string name="dialog_closed_by_admin_ok">موافق</string>
    <string name="add_message_to_favorite_error_118">الرسالة فارغة</string>
    <string name="add_message_to_favorite_error_119">فشل في اضافة الرسالة</string>
    <string name="add_message_to_favorite_error_120">الرسالة مكررة</string>
    <string name="add_message_to_favorite_error_117">الرسالة تم الاضافة بنجاح</string>
    <string name="forget_activation_code_error">الرجاء ادخال كود التفعيل </string>
    <string name="error_username_lang">من فضلك ادخل الاسم  باللغه الانجليزية و بدون مسافات </string>
    <string name="error_sendername_lang">اسم المرسل يجب ان يكون 11 حرف انجليزي او 15 رقم ولا يمكن ان يكون بأحرف عربية فى حالة ارسال اسم مرسل رقم فسوف يتم خصم قيمة رسالة منك</string>
    <string name="forget_password_code_1">تم ارسال الكود</string>
    <string name="forget_password_code_2">نقص بالبيانات المبعوته</string>
    <string name="forget_password_code_3">هذا البريد الالكتروني غير موجود</string>
    <string name="forget_password_code_4">لا يوجد تطابق</string>
    <string name="forget_password_code_5">المستخدم غير مفعل</string>
    <string name="forget_password_code_6">انتظر بضع دقائق للمحاولة مره اخري</string>
    <string name="forget_password_code_7">رقم الجوال غير موجود</string>
    <string name="forget_password_code_8">لا يوجد تطابق</string>
    <string name="forget_password_code_9">كود التفعيل غير صحيح</string>
    <string name="error_app_msg">هناك خطاء يرجي التاكد</string>
    <string name="success_app_msg">تم الحفظ بنجاح</string>
    <string-array name="deposit_ways">
        <item>@string/choose_deposite_way</item>
        <item>@string/deposit_cash_to_bank</item>
        <item>@string/deposit_transfer_to_exchange</item>
        <item>@string/deposit_transfer_via_internet</item>
        <item>@string/deposit_phone_to_phone</item>
        <item>@string/deposit_from_bank_to_bank</item>
    </string-array>
    <string-array name="side_menu">
        <item>@string/send_sms</item>
        <item>@string/sender_names</item>
        <item>@string/settings</item>
    </string-array>
    <string name="creating_support">تذاكر الدعم</string>
    <string name="new_ticket">تذكرة جديدة</string>
    <string name="opened_tickets">التذاكر المفتوحة</string>
    <string name="closed_tickets">التذاكر المغلقة</string>
    <string name="bank_paypal">Paypal</string>
    <string name="bank_transfers">تحويلات البنوك</string>
    <string name="bank_googel_wallet">جوجل</string>
    <string name="payment_choose_methods">اختار طريقة الدفع</string>
    <string name="payment_choose_packages">اختار الباقة المطلوبة</string>
    <string name="payment_choose_bank">اختار البنك المراد للايداع</string>
    <string name="payment_choose_packages_pack_0_sms_number">عدد الرسائل</string>
    <string name="payment_choose_packages_pack_0_total_price">اجمالي التكلفة</string>
    <string name="payment_choose_packages_pack_0_sms_price">سعر الرسالة</string>
    <string name="payment_choose_packages_pack_1">الباقة الاولي</string>
    <string name="payment_choose_packages_pack_2">الباقة الثانية</string>
    <string name="payment_choose_packages_pack_3">الباقة الثالثة</string>
    <string name="payment_choose_packages_pack_4">الباقة الرابعة</string>
    <string name="payment_choose_bank_section_warning_title">اختر البنك الذي تريد الايداع عليه لتظهر لك معلومات البنك وقم بتحويل المبلغ ثم قم بالضغط على استكمال الدفع</string>
    <string name="payment_bank_name">البنك</string>
    <string name="payment_bank_acc_name">اسم الحساب</string>
    <string name="payment_bank_acc_number">رقم الحساب</string>
    <string name="payment_bank_iban_number">رقم IBAN</string>
    <string name="payment_bank_address">العنوان</string>
    <string name="payment_bank_deposite">هل تم الدفع</string>
    <string name="payment_bank_Ok_btn">استكمال الدفع</string>
    <string name="payment_bank_spinner_default_txt">اختار البنك</string>
    <string name="payment_bank_packages_error">يرجي اختيار الباقة</string>
    <string name="payment_bank_spinner_error">يرجي اختيار البنك</string>
    <string name="payment_bank_is_payment_done">يرجي اختيار هل تم الدفع</string>
    <string name="uplaod_numbers">رفع الأرقام</string>
    <string name="uplaod_numbers_title">رفع الأرقام</string>
    <string name="uplaod_numbers_progress_text">جاري تحميل الأرقام</string>
    <string name="uplaod_numbers_text">عزيزي المستخدم يرجي النقر علي زر التحميل ادناه حتي نتمكن من تحميل جميع دليل الهاتف الخاص بكورفعها الي التطبيق</string>
    <string name="uplaod_numbers_code_105">الارسال مغلق</string>
    <string name="uplaod_numbers_code_106">الحساب غير مفعل</string>
    <string name="uplaod_numbers_code_107">الحساب موقوف</string>
    <string name="uplaod_numbers_code_108">غير مفعل جوال</string>
    <string name="uplaod_numbers_code_109">غير مفعل بريد الكترونى</string>
    <string name="uplaod_numbers_code_110">اسم المجموعة موجود</string>
    <string name="uplaod_numbers_code_111">خطأ فى رقم المجموعة</string>
    <string name="uplaod_numbers_code_112">تم انشاء المجموعة بنجاح</string>
    <string name="uplaod_numbers_code_113">فشل فى انشاء المجموعة</string>
    <string name="uplaod_numbers_numbers_code_113">تمت اضافة الرقم</string>
    <string name="uplaod_numbers_successed">تمت اضافة الرقم بنجاح</string>
    <string name="uplaod_numbers_missing">حدث خطء في رفع بعض الأرقام</string>
    <string name="sms_archive">ارشيف الرسائل</string>
    <string name="sms_archive_title">اسم المرسل:</string>
    <string name="sms_archive_detais_points">عدد النقاط</string>
    <string name="sms_archive_detais_messagenumber">رقم الرسالة</string>
    <string name="sms_archive_detais_numbers">الارقام</string>
    <string name="sms_archive_detais_messagescount">عدد الرسائل</string>
    <string name="sms_archive_code_101">البيانات ناقصة</string>
    <string name="sms_archive_code_102">اسم المستخدم غير صحيح </string>
    <string name="sms_archive_code_103">كلمة المرور غير صحيحة</string>
    <string name="sms_archive_code_104">لا يوجد رصيد فى الحساب</string>
    <string name="sms_archive_code_111">الارسال مغلق</string>
    <string name="sms_archive_code_113">الحساب غير مفعل</string>
    <string name="sms_archive_code_114">الحساب موقوف</string>
    <string name="sms_archive_code_115">غير مفعل جوال</string>
    <string name="sms_archive_code_116">غير مفعل جوال</string>
    <string name="sms_archive_code_118">لم يتم الحصول على نتيجة</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="password">كلمه المرور </string>
    <string name="sign_in">تسجيل دخول</string>
    <string name="login">دخول</string>
    <string name="new_user">مستخدم جديد</string>
    <string name="loginning">جاري تسجيل الدخول </string>
    <string name="error_username_incorect">اسم الدخول غير صحيح</string>
    <string name="error_password_incorrect">خطأ كلمة المرور غير صحيحه</string>
    <string name="error_account_inactive">حسابك غير مفعل </string>
    <string name="error_account_banned">هذا الحساب موقوف </string>
    <string name="forget_password">نسيت كلمه المرور</string>
    <string name="remember_me">تذكرني</string>
    <string name="enter_username_password">يرجي ادخال اسم الدخول وكلمه المرور</string>
    <string name="new_user_note">لا تملك حساب معنا حتي الان ..يمكن التسجيل معنا مجانا  </string>
    <string name="forget_passwordScreen_title">استرجاع كلمة المرور</string>
    <string name="forget_passwordHint_text">عريزي المستخدم للحصول علي رمز التحقق الخاص بك يرجي التحقق من هاتفك المحمول</string>
    <string name="forget_passwordMobile_number">رقم الهاتف المحمول</string>
    <string name="forget_passwordSend">ارسال كلمة المرور</string>
    <string name="forget_password_select_method">اختر طريقة التحقق</string>
    <string name="change_password_title">تغير كلمة المرور</string>
    <string name="change_password_txt_info">عزيزي المستخدم يرجي كتابة كلمة المرور القديمةالخاصة بك واخري جديدة</string>
    <string name="change_password_old_password">كلمة المرور القديمة</string>
    <string name="change_password_new_password">كلمة المرور الجديدة</string>
    <string name="change_password_confirm_password">تاكيد كلمة المرور</string>
    <string name="change_password_send_btn">تغيير كلمة المرور</string>
    <string name="change_password_update_successful">تم التحديث بنجاح</string>
    <string name="change_password_update_failed">فشل في التحديث</string>
    <string name="change_password_confirm_error">خطاء في تاكيد كلمة المرور</string>
    <string name="change_password_error_oldPassword">خطاء في كلمة المرور القديمة</string>
    <string name="select_default_title">اختار اسم المرسل الافتراضي</string>
    <string name="select_default_title_send_btn">حفظ</string>
    <string name="select_default_title_cancel_btn">الغاء</string>
    <string name="full_name">الاسم بالكامل</string>
    <string name="repeat_password">اعاده كلمه المرور</string>
    <string name="country">الدوله</string>
    <string name="mobile">رقم الجوال</string>
    <string name="email">البريد الالكتروني</string>
    <string name="register">تسجيل</string>
    <string name="choose_country">اختر الدوله</string>
    <string name="city">المدينه</string>
    <string name="choose_cities">اختر المدينه</string>
    <string name="error_full_name_required">من فضلك ادخل الاسم بالكامل</string>
    <string name="error_username_length">من فضلك ادخل اسم الدخول لا يقل عن 5 حروف </string>
    <string name="error_username_character">اسم الدخول يجب ان يكون حروف انجليزية فقط و _.- لا يحتوى على مسافات</string>
    <string name="error_mobile_invalid">من فضلك ادخل الجوال بطريقه صحيحه </string>
    <string name="error_password_length">من فضلك ادخل كلمة المرور لا تقل عن 6 احرف</string>
    <string name="error_special_api">من فضلك ادخل special api</string>
    <string name="error_repeat_password">اعادة كلمة المرور غير مطابقة لكلمة المرور</string>
    <string name="error_email_address">من فضلك ادخل البريد الإلكترونى بطريقه صحيحه</string>
    <string name="error_all_fiels_required">من فضلك ادخل كافة البيانات</string>
    <string name="invalid_api">خطا فى  special api</string>
    <string name="error_username_registered">اسم الدخول مسجل من قبل </string>
    <string name="request_register_new_user">جارى التسجيل .....</string>
    <string name="error_repeated_email">عفوا البريد الالكتروني مسجل سابقا</string>
    <string name="error_repeated_mobile">عفوا رقم الجوال مسجل سابقا</string>
    <string name="c_d_message_confirmation">تاكيد الارسال</string>
    <string name="c_d_message_confirmation_first_txt">عزيزي المستخدم يرجي التاكد من الأرقام التي تريد أن ترسل لهم الرسائل</string>
    <string name="c_d_message_confirmation_name_txt">الاسم:</string>
    <string name="c_d_message">الرسالة</string>
    <string name="c_d_messages_number">عدد الرسالة</string>
    <string name="c_d_phones">دليل الهواتف</string>
    <string name="c_d_confirm_btn">تاكيد الأرسال</string>
    <string name="sender_list">قائمه الاسماء</string>
    <string name="new_senders">الاسماء الجديده</string>
    <string name="all_senders">كل الاسماء</string>
    <string name="accepted_sender_name">اسم مرسل مفعل</string>
    <string name="need_confirmation">اسم مرسل يحتاج الي تآكيد</string>
    <string name="waitng_acceptance">في انتظار تفعيل اسم المرسل</string>
    <string name="refused_sender">اسم مرسل مرفوض</string>
</resources>